Feat! -22 Support (#56)
* add helipads to the data

* cleanup

* checking in this madness, still not handling all the routes yet.

* feat: allows the graph test to be more meaningful and adds capability to the graph to support all the things.

* update unit test

* feat! just break it and make the details have the list of things we want to expand to.